[package]
name = "compiler_warnings"
version = "0.0.0"
edition.workspace = true
authors = ["Daniel Müller <deso@posteo.net>"]
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = { path = "../../libbpf-cargo" }
log = "0.4.25"
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }

[dependencies]
libbpf-rs = { path = "../../libbpf-rs" }
